# image_processor

./: .gitignore  BMP.cpp  BMP.h  CMakeLists.txt  Color.cpp  Color.h  Crop.cpp  Crop.h  Custom.cpp  Custom.h  EdgeDetection.cpp  EdgeDetection.h  Filter.h  FilterFactory.cpp  FilterFactory.h  GaussianBlur.cpp  GaussianBlur.h  Grayscale.cpp  Grayscale.h  IO.h  Image.cpp  Image.h  MatrixFilter.cpp  MatrixFilter.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h  main.cpp  test_color.cpp  test_crop.cpp  test_edge_detection.cpp  test_grayscale.cpp  test_image.cpp  test_io.cpp  test_negative.cpp  test_sharpening.cpp
